# elkulator

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  README.md  configure.ac  elkulator-common.h.in  elkulator-config.h.in  libs.cmake  sources.cmake
cmake/: checks.cmake  cppunit.cmake
samples/: elk.cfg
script/: cmake  test  trace
src/: 1770.c  2xsai.c  2xsai.h  6502.c  Makefile.am  Makefile.mingw  adc.c  adf.c  allegro_icon.c  common.h  config.c  csw.c  ddnoise.c  debugger.c  disc.c  elk.c  elk.h  elkulator-config.h  fdi.c  fdi2raw.c  firstbyte.c  linux-gui.c  linux-gui.h  linux-keydefine.c  linux.c  linuxmain.c  main.c  mem.c  palfilt.c  path.c  path.h  resources.h  savestate.c  scale2x.c  sideways_bank.c  sideways_bank.h  sound.c  soundopenal.c  ssd.c  tapenoise.c  (+6 more)
test/: Makefile.am  Makefile.mingw  path_test.c  path_test.cpp  path_test.h  test.c  test.cpp
